--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,23 +5,20 @@
 # prevent it from being included in the site.
 
 main:
+  - title: "Education"
+    url: /education/    
+    
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Research and Teaching Experience"
+    url: /research_teaching/    
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Work Experience"
+    url: /work/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Skills and Certifications"
+    url: /skills/
     
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  - title: "Contact"
+    url: /contact/
