--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Mohammad Barzegar"
   pronouns         : # example: "she/her"  
-  bio              : "I'm a MSc student in AI, a machine learning researcher with a publication track record, and an all-around engineer who loves digging into how AI can be used to tackle medical challenges. My goal is to find ways to make healthcare more efficient with AI, whether through independent research or teaming up with experts from different fields. My main interests include medical vision-language models, generative AI, and making models more robust, but I'm always open to exploring new ideas!"
+  bio              : "MSc Student in AI, Researching Medical Vision-Language"
   location         : "Bushehr, Iran"
   employer         : "Persian Gulf University"
   uri              : # URL
