--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /publications/
 
   - title: "Experiences"
-    url: /work/
+    url: /experiences/
         
   - title: "Skills"
     url: /skills/
