--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ author:
   orcid            : "https://orcid.org/0009-0002-4227-3878"
   semantic         : # URL
   pubmed           : # URL
-  researchgate     : # URL
+  researchgate     : "https://www.researchgate.net/profile/Mohammad-Barzegar-10"
   scopus           : # URL
 
   # Repositories and software development
@@ -59,7 +59,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # mohammad-barzegar
+  linkedin         : "https://www.linkedin.com/in/mohammad-barzegar/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
